platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_114.platter
start() {
  person of floy;
  floy:age = 19;
  floy:age = floy:age + 1;
  isAdult = floy:age >= 18;
  chars of x = tochars(isAdult); 
  bill(x);
}
